# hypervisor

./: .gitignore  CMakeLists.txt  CMakePresets.json  compile_commands.json  deploy_to_vm.ps1  setup_vscode_encoding.ps1  test_vm_connection.ps1  vm_config.ps1
cert/: ContosoTest.cer  sign.bat
src/driver/: CMakeLists.txt  assembly.hpp  driver_main.cpp  ept.cpp  ept.hpp  hypervisor.cpp  hypervisor.hpp  memory.cpp  memory.hpp  msr_handler.cpp  msr_handler.hpp  new.cpp  new.hpp  thread.cpp  thread.hpp  vmx.hpp
src/runner/: CMakeLists.txt  main.cpp
src/shared/: irp_data.hpp
